--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -4,10 +4,9 @@
 name: Python application
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  schedule:
+  # 定时任务，在每天的5点
+    - cron: '0 21 * * *'
 
 permissions:
   contents: read
@@ -25,4 +24,4 @@ jobs:
         python-version: "3.10"
     - name: update_anime_info
       run: |
-        main
+        main.py
