--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -25,8 +25,11 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: 安装模块
+      run: |
+          pip install -r requirements.txt
     - name: update_anime_info
       run: |
-        main.py
+        python main.py
       env:
         api_key: ${{secrets.api_key}}
