--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -27,6 +27,7 @@ jobs:
         python-version: "3.10"
     - name: 安装模块
       run: |
+          pip install --upgrade setuptools==57.5.0
           pip install -r requirements.txt
     - name: update_anime_info
       run: |
