--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -34,3 +34,14 @@ jobs:
         python main.py
       env:
         api_key: ${{secrets.api_key}}
+    - name: commit
+      run: |
+        git config --global user.email 996625688@qq.com
+        git config --global user.name IceKyrin
+        git add .
+        git commit -m "update" -a
+
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.git_token }}
