--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -42,6 +42,6 @@ jobs:
         git commit -m "update" -a
 
     - name: Push changes
-      uses: ad-m/github-push-action@master
+      uses: actions/setup-python@v3
       with:
-        github_token: ${{ secrets.git_token }}
+        github_token: ${{secrets.git_token}}
