--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -36,11 +36,11 @@ jobs:
         api_key: ${{secrets.api_key}}
     - name: commit
       run: |
-        git config --global user.email 996625688@qq.com
-        git config --global user.name IceKyrin
+        git config --global user.email "996625688+github-actions[bot]@users.noreply.github.com"
+        git config --global user.name github-actions[bot]
         git add .
         git commit -m "update" -a
     - name: Push changes
-      uses: ad-m/github-push-action@master
+      uses: actions/setup-python@v3
       with:
         github_token: ${{secrets.git_token}}
