--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -43,4 +43,4 @@ jobs:
     - name: Push change
       run: |
           git remote set-url origin https://${{secrets.git_token}}@github.com/IceKyrin/auto_anime_info.git/
-      
+          git push
