--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -42,5 +42,5 @@ jobs:
         git commit -m "update" -a
     - name: Push change
       run: |
-        git push origin https://IceKyrin:${{secrets.git_token}}@github.com/IceKyrin/auto_anime_info.git/
-          
+        git remote add origin https://oauth2:${{secrets.git_token}}@github.com/IceKyrin/auto_anime_info.git
+        git push -u origin master
