--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -34,12 +34,11 @@ jobs:
         python main.py
       env:
         api_key: ${{secrets.api_key}}
-    - name: commit
+    - name: Commit files
       run: |
-        git config --global user.email "996625688qq.com"
-        git config --global user.name "IceKyrin"
-        git add .
-        git commit -m "update" -a
+        git config --local user.email "996625688+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git commit -m "Add changes" -a
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
